[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdp_analyser"
version = "0.1.0"
description = "Interactive electrochemical data analysis"
authors = [
  { name="Luke Ansell", email="ansellluke2@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "scikit-learn"
]